// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test LayerContextMenu should render correctly in mobile 1`] = `
<div>
  <div
    class="item-group"
  >
    <div
      class="adm-divider adm-divider-vertical adm-divider-center divider"
    />
    <div
      class="object-panel-item"
      id="deletelayer"
    >
      <div
        class="main"
      >
        <svgr-url />
      </div>
      <div
        class="label"
      >
        Delete Layer
      </div>
    </div>
    <div
      class="object-panel-item"
      id="merge_down_layer"
    >
      <div
        class="main"
      >
        <svgr-url />
      </div>
      <div
        class="label"
      >
        Merge Down
      </div>
    </div>
    <div
      class="object-panel-item"
      id="locklayer"
    >
      <div
        class="main"
      >
        <svgr-url />
      </div>
      <div
        class="label"
      >
        Lock Layer
      </div>
    </div>
    <div
      class="object-panel-item"
      id="dupelayer"
    >
      <div
        class="main"
      >
        <svgr-url />
      </div>
      <div
        class="label"
      >
        Duplicate Layer
      </div>
    </div>
    <div
      class="object-panel-item"
      id="renameLayer"
    >
      <div
        class="main"
      >
        <svgr-url />
      </div>
      <div
        class="label"
      >
        Rename Layer
      </div>
    </div>
  </div>
</div>
`;

exports[`test LayerContextMenu should render correctly when multiselecting 1`] = `
<body>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
  />
  <div>
    <div
      class="ant-dropdown-trigger ant-dropdown-open"
    >
      <div
        data-testid="trigger"
      >
        Layer List
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up css-dev-only-do-not-override-hash ant-dropdown-placement-topLeft"
      style="--arrow-x: 0px; --arrow-y: 2px; left: 0px; top: -1000vh; box-sizing: border-box; bottom: 4px;"
    >
      <ul
        class="ant-dropdown-menu ant-dropdown-menu-root ant-dropdown-menu-vertical ant-dropdown-menu-light css-dev-only-do-not-override-hash"
        data-menu-list="true"
        role="menu"
        tabindex="0"
      >
        <li
          aria-disabled="true"
          class="ant-dropdown-menu-item ant-dropdown-menu-item-disabled ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-renameLayer"
          role="menuitem"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Rename Layer
          </span>
        </li>
        <li
          class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-dupelayer"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Duplicate Layer
          </span>
        </li>
        <li
          class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-locklayer"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Lock Layer
          </span>
        </li>
        <li
          class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-deletelayer"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Delete Layer
          </span>
        </li>
        <li
          aria-disabled="true"
          class="ant-dropdown-menu-item ant-dropdown-menu-item-disabled ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-merge_down_layer"
          role="menuitem"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Merge Down
          </span>
        </li>
        <li
          aria-disabled="true"
          class="ant-dropdown-menu-item ant-dropdown-menu-item-disabled ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-merge_all_layer"
          role="menuitem"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Merge All
          </span>
        </li>
        <li
          aria-disabled="false"
          class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-merge_selected_layer"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Merge Selected Layers
          </span>
        </li>
      </ul>
      <div
        aria-hidden="true"
        style="display: none;"
      />
    </div>
  </div>
</body>
`;

exports[`test LayerContextMenu should render correctly when selecting last 1`] = `
<body>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
  />
  <div>
    <div
      class="ant-dropdown-trigger ant-dropdown-open"
    >
      <div
        data-testid="trigger"
      >
        Layer List
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up css-dev-only-do-not-override-hash ant-dropdown-placement-topLeft"
      style="--arrow-x: 0px; --arrow-y: 2px; left: 0px; top: -1000vh; box-sizing: border-box; bottom: 4px;"
    >
      <ul
        class="ant-dropdown-menu ant-dropdown-menu-root ant-dropdown-menu-vertical ant-dropdown-menu-light css-dev-only-do-not-override-hash"
        data-menu-list="true"
        role="menu"
        tabindex="0"
      >
        <li
          aria-disabled="false"
          class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-renameLayer"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Rename Layer
          </span>
        </li>
        <li
          class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-dupelayer"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Duplicate Layer
          </span>
        </li>
        <li
          class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-locklayer"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Lock Layer
          </span>
        </li>
        <li
          class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-deletelayer"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Delete Layer
          </span>
        </li>
        <li
          aria-disabled="true"
          class="ant-dropdown-menu-item ant-dropdown-menu-item-disabled ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-merge_down_layer"
          role="menuitem"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Merge Down
          </span>
        </li>
        <li
          aria-disabled="false"
          class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-merge_all_layer"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Merge All
          </span>
        </li>
        <li
          aria-disabled="true"
          class="ant-dropdown-menu-item ant-dropdown-menu-item-disabled ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-merge_selected_layer"
          role="menuitem"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Merge Selected Layers
          </span>
        </li>
      </ul>
      <div
        aria-hidden="true"
        style="display: none;"
      />
    </div>
  </div>
</body>
`;

exports[`test LayerContextMenu should render correctly when selecting printing layer 1`] = `
<body>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
  />
  <div>
    <div
      class="ant-dropdown-trigger ant-dropdown-open"
    >
      <div
        data-testid="trigger"
      >
        Layer List
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up css-dev-only-do-not-override-hash ant-dropdown-placement-topLeft"
      style="--arrow-x: 0px; --arrow-y: 2px; left: 0px; top: -1000vh; box-sizing: border-box; bottom: 4px;"
    >
      <ul
        class="ant-dropdown-menu ant-dropdown-menu-root ant-dropdown-menu-vertical ant-dropdown-menu-light css-dev-only-do-not-override-hash"
        data-menu-list="true"
        role="menu"
        tabindex="0"
      >
        <li
          aria-disabled="false"
          class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-renameLayer"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Rename Layer
          </span>
        </li>
        <li
          class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-dupelayer"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Duplicate Layer
          </span>
        </li>
        <li
          class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-locklayer"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Lock Layer
          </span>
        </li>
        <li
          class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-deletelayer"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Delete Layer
          </span>
        </li>
        <li
          aria-disabled="true"
          class="ant-dropdown-menu-item ant-dropdown-menu-item-disabled ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-merge_down_layer"
          role="menuitem"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Merge Down
          </span>
        </li>
        <li
          aria-disabled="false"
          class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-merge_all_layer"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Merge All
          </span>
        </li>
        <li
          aria-disabled="true"
          class="ant-dropdown-menu-item ant-dropdown-menu-item-disabled ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-merge_selected_layer"
          role="menuitem"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Merge Selected Layers
          </span>
        </li>
        <li
          class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-toggle_fullcolor_layer"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Switch to full color layer
          </span>
        </li>
        <li
          aria-disabled="true"
          class="ant-dropdown-menu-item ant-dropdown-menu-item-disabled ant-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-test-split_color"
          role="menuitem"
        >
          <span
            class="ant-dropdown-menu-title-content"
          >
            Expand Layer
          </span>
        </li>
      </ul>
      <div
        aria-hidden="true"
        style="display: none;"
      />
    </div>
  </div>
</body>
`;

exports[`test LayerContextMenu unlock layers should work 1`] = `
<div>
  <div
    class="item-group"
  >
    <div
      class="adm-divider adm-divider-vertical adm-divider-center divider"
    />
    <div
      class="object-panel-item"
      id="deletelayer"
    >
      <div
        class="main"
      >
        <svgr-url />
      </div>
      <div
        class="label"
      >
        Delete Layer
      </div>
    </div>
    <div
      class="object-panel-item"
      id="merge_down_layer"
    >
      <div
        class="main"
      >
        <svgr-url />
      </div>
      <div
        class="label"
      >
        Merge Down
      </div>
    </div>
    <div
      class="object-panel-item"
      id="locklayer"
    >
      <div
        class="main"
      >
        <svgr-url />
      </div>
      <div
        class="label"
      >
        Unlock
      </div>
    </div>
    <div
      class="object-panel-item"
      id="dupelayer"
    >
      <div
        class="main"
      >
        <svgr-url />
      </div>
      <div
        class="label"
      >
        Duplicate Layer
      </div>
    </div>
    <div
      class="object-panel-item"
      id="renameLayer"
    >
      <div
        class="main"
      >
        <svgr-url />
      </div>
      <div
        class="label"
      >
        Rename Layer
      </div>
    </div>
  </div>
</div>
`;
